# snes_emulator

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
docker/: mesen  start-novnc.sh
scraping/: .gitignore  Dockerfile  compose.yaml  fetch_ops.ts  generate_code.ts
src/: bus.rs  cartridge.rs  cpu.rs  cpu_test.rs  main.rs  opscodes.rs  ppu.rs
tests/: setup.sh
